--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is Home Page</h1>
+    <h2>dfsdgtrgtrdyv</h2>
+    <h1 class="h2" id="h1">This is Home Page</h1>
 </body>
 </html>
