--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>dfsdgtrgtrdyv</h2>
+    <h1>This is My First Project</h1>
+    <p>About Me</p>
     <h1 class="h2" id="h1">This is Home Page</h1>
 </body>
 </html>
