--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>About Me</p>
     <h1 class="h2" id="h1">This is Home Page</h1>
     <h3>Lets do the work</h3>
+    <img src="img/flag.jpg" alt="">
 </body>
 </html>
