--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <img src="img/flag.jpg" alt="">
     <p>Talking from the second branch</p>
     <h1 class="h4" id="h3"><p>Talking from the second branch</p></h1>
+    <h1 class="h4" id="h3"><p>Talking from the third branch</p></h1>
 </body>
 </html>
